[project]
name = "ai-chatbot"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "faiss-cpu>=1.13.2",
    "langchain-community>=0.4.1",
    "langchain-huggingface>=1.2.2",
    "langchain-text-splitters>=1.1.2",
    "ollama>=0.6.2",
    "pypdf2>=3.0.1",
    "sentence-transformers>=5.4.1",
]
